# cardano-db-sync-monitoring

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  db-sync-report-template.md  node-report-template.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: 01-time-series-fundamentals.md  02-cardano-domain-primer.md  03-graph-catalog.md  04-statistics-primer.md  05-database-internals.md  06-glossary.md  07-system-performance-primer.md  08-data-access-and-databases.md  09-reading-and-smoothing-bursty-rates.md  10-generating-reports.md  11-report-generator-internals.md  12-useful-queries.md  13-node-report-generation.md  14-reading-the-rollback-graphs.md  15-tracking-and-benchmarking-rollbacks.md  16-compare-rollback-performance-step-by-step.md  17-reproducing-issue-2083-lengthy-rollbacks.md  README.md
docs/postmortems/: 2026-06-06-empty-disk-and-invisible-rts.md  2026-06-08-database-is-locked-collector-crash.md
hooks/: pre-commit
scripts/: _common.py  _db_sync_queries.py  _disk_size.py  _report.py  _rollback.py  backup-stats.py  db-sync-epoch-report.py  db-sync-ledger-size-monitor.py  db-sync-monitor.py  db-sync-plot.py  db-sync-report.py  db-sync-resource-monitor.py  db-sync-rollback-benchmark.py  db-sync-rollback-monitor.py  db-sync-stats-report.py  node-db-size-monitor.py  node-monitor.py  node-plot.py  node-resource-monitor.py  node-rts-monitor.py  node-stats-report.py  rename-version.py  rollback-plan-check.py  stats-summary.py
tests/: conftest.py  test_backup_stats.py  test_db_sync_stats_report.py  test_disk_size.py  test_era.py  test_formatters.py  test_gap_breaks.py  test_load_all_versions.py  test_node_durations.py  test_node_stats_report.py  test_plot_disk.py  test_plot_out_path.py  test_plot_rollback.py  test_plot_rowcounts.py  test_plot_rts.py  test_rename_version.py  test_resolve_versions.py  test_rollback_benchmark.py  test_rollback_core.py  test_rollback_monitor.py  test_rollback_plan_check.py  test_rts_monitor.py  test_scripts_smoke.py  test_stats_summary.py  test_subplot_dims.py  test_time.py  test_version_tables_registry.py
