[project]
name = "db-sync-monitoring"
version = "1.1.0"
description = "Track and visualize Cardano db-sync and cardano-node statistics."
authors = [{ name = "Artur Wieczorek", email = "artur.wieczorek@iohk.io" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2,<3",
    "plotly>=6.0,<7",
    "psutil>=7.0,<8",
    "psycopg2-binary>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.11,<1",
    "mypy>=1.10,<2",
    "pre-commit>=4,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true
lint.select = ["E", "F", "I", "UP", "NPY", "PERF", "RUF"]
lint.ignore = ["E501"]
exclude = [".venv", "archive", "data", "plots", "stats"]

[tool.mypy]
python_version = "3.10"
# We intentionally don't enable `strict` here because pandas/plotly are dynamic
# enough that strict mode produces a lot of cosmetic noise that doesn't help
# correctness. Keep specific, useful checks on.
ignore_missing_imports = true
warn_unused_configs = true
warn_unreachable = true
files = ["scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
# Promote unexpected FutureWarnings to errors so we notice future-incompat
# changes immediately. Specific known-benign FutureWarnings are silenced at
# their call sites; anything else surfaces a test failure.
filterwarnings = [
    "error::FutureWarning",
    "ignore::DeprecationWarning",
]
